Fix horizontal overflow in ChatFrame

--- a/public/src/scss/chatview.scss
+++ b/public/src/scss/chatview.scss
@@ -59,6 +59,7 @@
 
 	.line {
 		padding: 0 20px;
+		overflow-x: auto;
 
 		&.flashing {
 			position: relative;
